--- a/styles/duvidas-style.css
+++ b/styles/duvidas-style.css
@@ -126,7 +126,7 @@ border-bottom: 2px solid  #333;
         grid-template-columns: 1fr;
     }
 }
-@media (max-width:320px){
+@media (max-width:44em){
     .container-duvidas-cards{
         gap: 100px;
     }
